fix: add missing description to .github/actions/update_version/action.yaml

--- a/.github/actions/update_version/action.yaml
+++ b/.github/actions/update_version/action.yaml
@@ -1,4 +1,5 @@
 name: bump version in gradle.properties
+description: Updates gradle.properties with the new version
 inputs:
   version:
     required: true
