--- a/.github/workflows/cla.yaml
+++ b/.github/workflows/cla.yaml
@@ -6,22 +6,22 @@ on:
   pull_request_target:
     types: [opened, closed, synchronize]
 
-# Declare default permissions as read-only.
-permissions: read-all
+permissions:
+  contents: read
 
 jobs:
   CLAAssistant:
-    name: CLA Assistant
-    runs-on: ubuntu-latest
+    if: github.event.pull_request.draft == false
     permissions:
       actions: write
       contents: write
       pull-requests: write
       statuses: write
+    runs-on: ubuntu-latest
     steps:
       - name: "CLA Assistant"
         if: (github.event.comment.body == 'recheck' || github.event.comment.body == 'I have read the CLA Document and I hereby sign the CLA') || github.event_name == 'pull_request_target'
-        uses: contributor-assistant/github-action@ca4a40a7d1004f18d9960b404b97e5f30a505a08 # v2.6.1
+        uses: contributor-assistant/github-action@v2.6.1
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           PERSONAL_ACCESS_TOKEN: ${{ secrets.CLA_ACCESS_TOKEN }}
