--- a/profiler-ui/package.json
+++ b/profiler-ui/package.json
@@ -1,6 +1,7 @@
 {
   "name": "profiler-webapp",
   "version": "1.0.0",
+  "license": "Apache-2.0",
   "private": true,
   "scripts": {
     "dev": "vite",
