--- a/.github/workflows/super-linter.yaml
+++ b/.github/workflows/super-linter.yaml
@@ -39,6 +39,7 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@08c6903cd8c0fde910a37f88322edcfb5dd907a8 # v5
         with:
+          persist-credentials: false
           # Full git history is needed to get a proper list of changed files within `super-linter`
           fetch-depth: 0
 
@@ -48,6 +49,7 @@ jobs:
           ref: main # fix/superlinter-config
           repository: netcracker/.github
           path: netcracker.github/
+          persist-credentials: false
           sparse-checkout: |
             config/linters
 
