--- a/.github/linters/.golangci.yml
+++ b/.github/linters/.golangci.yml
@@ -1,3 +1,10 @@
 version: "2"
 run:
   timeout: 10m
+
+linters:
+  exclusions:
+    rules:
+      - path-except: '(.+)_test\.go'
+        linters:
+          - errcheck
