--- a/.github/linters/.golangci.yml
+++ b/.github/linters/.golangci.yml
@@ -5,6 +5,6 @@ run:
 linters:
   exclusions:
     rules:
-      - path-except: '(.+)_test\.go'
+      - path: _test\.go
         linters:
           - errcheck
